--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "header-microservice",
   "version": "1.0.0",
-  "description": "",
+  "description": "Header microservice",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server"
   },
   "author": "Jeff K",
   "license": "MIT",
